# grid_qmc

./: .gitignore  CMakeLists.txt  Makefile  README.md  config_gellmann.mk  config_linux.mk  poisson_fortran.h  qestimator.cpp  qestimator.h  qfciqmc_simple.cpp  qfciqmc_simple.h  qgrid.cpp  qgrid.h  qhamiltonian.cpp  qhamiltonian.h  qintegral.cpp  qintegral.h  qmain.cpp  qmethods.cpp  qmethods.h  qorbitals.h  qparams_reader.cpp  qparams_reader.h  qpoisson.cpp  qpoisson.h  qrandom_seed.h  second_deriv_becke.f90
cmake/Modules/: FindArmadillo.cmake
lebedev_grid/: log  sphere_lebedev_rule.cpp~  sphere_lebedev_rule.hpp  sphere_lebedev_rule_prb.x
poisson_solver/: Makefile  ppoisson.f90
prototypes/: ABString.py
ref/: CMakeLists.txt  ref_qhamiltonian.cpp  ref_qhamiltonian.h
sample_inputs/: input_h_d  input_he_t
src/: CMakeLists.txt  qbasis.cpp  qbasis.h  qestimator.cpp  qestimator.h  qfciqmc_mpi.cpp  qfciqmc_mpi.h  qfciqmc_simple.cpp  qfciqmc_simple.h  qgraph.cpp  qgraph.h  qgrid.cpp  qgrid.h  qhamiltonian.cpp  qhamiltonian.h  qhamiltonian_mpi.cpp  qhamiltonian_mpi.h  qintegral.cpp  qintegral.h  qmain.cpp  qorbitals.h  qparams_reader.cpp  qparams_reader.h  qpoisson.cpp  qrandom_seed.h  qsampler.cpp  qsampler.h  qsystem.h  qtimer.h
src/lebedev_grid/: CMakeLists.txt  sphere_lebedev_rule.cpp
src/poisson_solver/: CMakeLists.txt  pmodules_stripped.f90
src/utils/: CMakeLists.txt  read_polymer_data.f90  second_deriv_becke.f90
testing/: CMakeLists.txt  basis.cpp  coulomb_eval.cpp  estimators.cpp  estimators1.in  estimators2.in  estimators_mpi.cpp  graph.cpp  grid_ce.cpp  grid_ce.in  parallel_fci.cpp  simple_fci.cpp  simple_fci_cache.cpp  simple_fci_li2.cpp  simple_fci_test_li2.in  spherical.cpp  spherical.in  uniform_sampler.cpp
